--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/system": "^7.3.3",
+    "@mui/x-charts": "^8.15.0",
     "formik": "^2.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
